--- a/price.html
+++ b/price.html
@@ -111,23 +111,23 @@
           </div>
           <h1 class="price-title">Условия и цены</h1>
           <p class="price-text">Компания предоставляет всем жителям полуострова и гостям Крыма услуги недорогого автопроката. У нас можно взять машину в аренду на сутки, неделю или несколько месяцев. Не отказывайте себе в свободе передвижения: арендуйте современные исправные авто на время отпуска, командировки, или пока ваш автомобиль находится в ремонте. К вашим услугам – большой автопарк новых автомобилей, более чем адекватные цены и отличный качественный сервис. <br><br>Если во время отдыха хотите сэкономить на такси и при этом осмотреть самые красивые места полуострова, вам не обойтись без услуг нашей компании. Чтобы заказать аренду авто, выберите машину на сайте и забронируйте на нужную дату. Сделать это можно по телефону или онлайн.</p>
-          <div class="price__acc">
-            <ul class="price__acc__header">
-              <li class="price__acc__header__item _active">
-                <span class="price__acc__header-title" data-season="spring">Весна</span>
-                <span class="price__acc__header-date">01.03-31.05</span>
+          <div class="price__tab">
+            <ul class="price__tab__header">
+              <li class="tab-header price__tab__header__item _active" data-season="spring">
+                <span class="price__tab__header-title">Весна</span>
+                <span class="price__tab__header-date">01.03-31.05</span>
               </li>
-              <li class="price__acc__header__item">
-                <span class="price__acc__header-title" data-season="summer">Лето</span>
-                <span class="price__acc__header-date">01.06-31.08</span>
+              <li class="tab-header price__tab__header__item" data-season="summer">
+                <span class="price__tab__header-title">Лето</span>
+                <span class="price__tab__header-date">01.06-31.08</span>
               </li>
-              <li class="price__acc__header__item">
-                <span class="price__acc__header-title" data-season="autumn">Осень</span>
-                <span class="price__acc__header-date">01.09-31.11</span>
+              <li class="tab-header price__tab__header__item" data-season="autumn">
+                <span class="price__tab__header-title">Осень</span>
+                <span class="price__tab__header-date">01.09-31.11</span>
               </li>
             </ul>
-            <ul class="price__acc__body">
-              <li class="price__acc__body__item">
+            <ul class="tab-body price__tab__body _show" data-season-body="spring" style="display: block;">
+              <li class="price__tab__body__item">
                 <table>
                   <tr>
                     <td>Автомобиль</td>
@@ -141,6 +141,82 @@
                     <td>Datsun On-do Механика 2020</td>
                     <td>МКПП</td>
                     <td>2000 ₽</td>
+                    <td>1700 ₽</td>
+                    <td>1600 ₽</td>
+                    <td>50 000 ₽</td> 
+                  </tr>
+                  <tr>
+                    <td>Kia Rio Sedan Automatic</td>
+                    <td>МКПП</td>
+                    <td>2000 ₽</td>
+                    <td>1700 ₽</td>
+                    <td>1600 ₽</td>
+                    <td>50 000 ₽</td> 
+                  </tr>
+                  <tr>
+                    <td>VW Polo Sedan Механика</td>
+                    <td>АКПП</td>
+                    <td>2000 ₽</td>
+                    <td>1700 ₽</td>
+                    <td>1600 ₽</td>
+                    <td>50 000 ₽</td> 
+                  </tr>
+                </table>
+              </li>
+            </ul>
+            <ul class="tab-body price__tab__body" data-season-body="summer">
+              <li class="price__tab__body__item">
+                <table>
+                  <tr>
+                    <td>Автомобиль</td>
+                    <td>КПП</td>
+                    <td>1 — 2 дня</td>
+                    <td>3 — 7 дней</td>
+                    <td>8 — 15 дней</td>
+                    <td>Залог</td> 
+                  </tr>
+                  <tr>
+                    <td>Datsun On-do Механика 2020</td>
+                    <td>МКПП</td>
+                    <td>9999 ₽</td>
+                    <td>1700 ₽</td>
+                    <td>1600 ₽</td>
+                    <td>50 000 ₽</td> 
+                  </tr>
+                  <tr>
+                    <td>Kia Rio Sedan Automatic</td>
+                    <td>МКПП</td>
+                    <td>2000 ₽</td>
+                    <td>1700 ₽</td>
+                    <td>1600 ₽</td>
+                    <td>50 000 ₽</td> 
+                  </tr>
+                  <tr>
+                    <td>VW Polo Sedan Механика</td>
+                    <td>АКПП</td>
+                    <td>2000 ₽</td>
+                    <td>1700 ₽</td>
+                    <td>1600 ₽</td>
+                    <td>50 000 ₽</td> 
+                  </tr>
+                </table>
+              </li>
+            </ul>
+            <ul class="tab-body price__tab__body" data-season-body="autumn">
+              <li class="price__tab__body__item">
+                <table>
+                  <tr>
+                    <td>Автомобиль</td>
+                    <td>КПП</td>
+                    <td>1 — 2 дня</td>
+                    <td>3 — 7 дней</td>
+                    <td>8 — 15 дней</td>
+                    <td>Залог</td> 
+                  </tr>
+                  <tr>
+                    <td>Datsun On-do Механика 2020</td>
+                    <td>МКПП</td>
+                    <td>5555 ₽</td>
                     <td>1700 ₽</td>
                     <td>1600 ₽</td>
                     <td>50 000 ₽</td> 
