--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <nav class="nav">
             <div class="nav__body">
               <button class="nav-burger"><span></span></button>
-              <a href="../index.html" class="nav__logo">
+              <a href="index.html" class="nav__logo">
                 <div class="nav__logo-img">
                   <img src="img/logo.svg" alt="Логотип">
                 </div>
@@ -66,8 +66,8 @@
                     <button class="nav-menu-close"></button>
                   </div>
                   <ul class="nav-menu__list">
-                    <li><a href="../index.html" class="_active-page">Главная</a></li>
-                    <li><a href="/autopark.html">Автопарк</a></li>
+                    <li><a href="index.html" class="_active-page">Главная</a></li>
+                    <li><a href="autopark.html">Автопарк</a></li>
                     <li><a href="price.html">Цены</a></li>
                     <li><a href="price.html">Условия</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
